Working on Assignment 3

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,47 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>Pixel Play</h1>
 
 <h5>NPM: </h5>
 <p>{{ npm }}<p>
-<h5>Name: </h5>
-<p>{{ name }}<p>
-<h5>Class: </h5>
-<p>{{ class }}<p>
+
+<h5>Name:</h5>
+<p>{{ name }}</p>
+
+<h5>Class:</h5>
+<p>{{ class }}</p>
+
+<h2>Our Gaming Products</h2>
+{{ products }}
+{% if not products %}
+<p>There are no gaming products available at the moment.</p>
+{% else %}
+<table>
+  <tr>
+    <th>Product Name</th>
+    <th>Price</th>
+    <th>Description</th>
+    <th>Category</th>
+    <th>Stock</th>
+  </tr>
+
+  {% comment %} Looping melalui produk untuk menampilkannya di tabel {% endcomment %}
+  {% for product in products %}
+  <tr>
+    <td>{{ product.name }}</td>
+    <td>${{ product.price }}</td>
+    <td>{{ product.description }}</td>
+    <td>{{ product.category }}</td>
+    <td>{{ product.stock }}</td>
+  </tr>
+  {% endfor %}
+</table>
+{% endif %}
+
+<br />
+
+<a href="{% url 'main:create_product' %}">
+  <button>Add New Product</button>
+</a>
+
+{% endblock content %}
