Individual Asssignment 4 Commit

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,14 +2,8 @@
 {% block content %}
 <h1>Pixel Play</h1>
 
-<h5>NPM: </h5>
-<p>{{ npm }}<p>
-
-<h5>Name:</h5>
+<h5>Username:</h5>
 <p>{{ name }}</p>
-
-<h5>Class:</h5>
-<p>{{ class }}</p>
 
 <h2>Our Gaming Products</h2>
 
@@ -43,5 +37,11 @@
 <a href="{% url 'main:create_product' %}">
   <button>Add New Product</button>
 </a>
+
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 
 {% endblock content %}
