--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,47 +1,50 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block meta %}
+<title>Pixel Play</title>
+{% endblock meta %}
+
 {% block content %}
-<h1>Pixel Play</h1>
+{% include 'navbar.html' %}
+<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen bg-gray-100 flex flex-col">
+  <div class="p-2 mb-6 relative">
+    <div class="relative grid grid-cols-1 z-30 md:grid-cols-3 gap-8">
+      {% include "card_info.html" with title='NPM' value=npm %}
+      {% include "card_info.html" with title='Name' value=name %}
+      {% include "card_info.html" with title='Class' value=class %}
+    </div>
+    <div class="w-full px-6 absolute top-[44px] left-0 z-20 hidden md:flex">
+      <div class="w-full min-h-4 bg-teal-600"></div>
+    </div>
+    <div class="h-full w-full py-6 absolute top-0 left-0 z-20 md:hidden flex">
+      <div class="h-full min-w-4 bg-teal-600 mx-auto"></div>
+    </div>
+  </div>
 
-<h5>Username:</h5>
-<p>{{ name }}</p>
+  <div class="px-3 mb-4">
+    <div class="flex rounded-md items-center bg-teal-600 py-2 px-4 w-fit">
+      <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
+    </div>
+  </div>
 
-<h2>Our Gaming Products</h2>
+  <div class="flex justify-end mb-6">
+    <a href="{% url 'main:create_product' %}" class="bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+        Add New Product
+    </a>
+  </div>
 
-{% if not products %}
-<p>There are no gaming products available at the moment.</p>
-{% else %}
-<table>
-  <tr>
-    <th>Product Name</th>
-    <th>Price</th>
-    <th>Description</th>
-    <th>Category</th>
-    <th>Stock</th>
-  </tr>
-
-  {% comment %} Looping melalui produk untuk menampilkannya di tabel {% endcomment %}
-  {% for product in products %}
-  <tr>
-    <td>{{ product.name }}</td>
-    <td>${{ product.price }}</td>
-    <td>{{ product.description }}</td>
-    <td>{{ product.category }}</td>
-    <td>{{ product.stock }}</td>
-  </tr>
-  {% endfor %}
-</table>
-{% endif %}
-
-<br />
-
-<a href="{% url 'main:create_product' %}">
-  <button>Add New Product</button>
-</a>
-
-<a href="{% url 'main:logout' %}">
-  <button>Logout</button>
-</a>
-
-<h5>Sesi terakhir login: {{ last_login }}</h5>
-
+  {% if not products %}
+  <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
+    <img src="{% static 'image/sad-pathfinder.png' %}" alt="Sad face" class="w-120 h-50 mb-4"/>
+    <p class="text-center text-gray-600 mt-4">There are no products available.</p>
+  </div>
+  {% else %}
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 w-full">
+    {% for product in products %}
+        {% include 'card_product.html' with product_entry=product %}
+    {% endfor %}
+  </div>
+  {% endif %}
+</div>
 {% endblock content %}
