--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -25,7 +25,7 @@
                       <p class="mt-1 text-sm text-gray-500">{{ field.help_text }}</p>
                   {% endif %}
                   {% for error in field.errors %}
-                      <p class="mt-1 text-sm text-red-600">{{ error }}</p>
+                    <p class="mt-1 text-sm text-white font-semibold bg-red-500 p-2 rounded">{{ error }}</p>
                   {% endfor %}
               </div>
           {% endfor %}
