--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -3,6 +3,7 @@
 
 {% block meta %}
 <title>Pixel Play</title>
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.7/dist/purify.min.js"></script>
 {% endblock meta %}
 
 {% block content %}
@@ -29,22 +30,173 @@
   </div>
 
   <div class="flex justify-end mb-6">
-    <a href="{% url 'main:create_product' %}" class="bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+    <!-- <a href="{% url 'main:create_product' %}" class="bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
         Add New Product
-    </a>
+    </a> -->
+    <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" onclick="showModal();">
+      Add New Product
+    </button>
   </div>
-
-  {% if not products %}
-  <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
-    <img src="{% static 'image/sad-pathfinder.png' %}" alt="Sad face" class="w-120 h-50 mb-4"/>
-    <p class="text-center text-gray-600 mt-4">There are no products available.</p>
+  <div id="product_entry_cards"></div>
+  <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+    <div id="crudModalContent" class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+      <!-- Modal header -->
+      <div class="flex items-center justify-between p-4 bg-teal-600 text-white rounded-t-lg">
+      <h3 class="text-xl font-semibold">
+        Add New Product
+        </h3>
+        <button type="button" class="text-white-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
+          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="px-6 py-4 space-y-6 form-style">
+        <form id="productForm" class="space-y-6">
+          <div class="flex flex-col">
+            <label for="name" class="mb-2 font-semibold text-gray-700">Name</label>
+            <input type="text" id="name" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-teal-500" placeholder="Enter product name" required>
+          </div>
+          <div class="flex flex-col">
+            <label for="price" class="mb-2 font-semibold text-gray-700">Price</label>
+            <input type="number" id="price" name="price" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-teal-500" placeholder="Enter product price" required>
+          </div>
+          <div class="flex flex-col">
+            <label for="description" class="mb-2 font-semibold text-gray-700">Description</label>
+            <textarea id="description" name="description" rows="3" class="mt-1 block w-full resize-none border border-gray-300 rounded-md p-2 hover:border-teal-500" placeholder="Enter product description" required></textarea>
+          </div>
+          <div class="flex flex-col">
+            <label for="category" class="mb-2 font-semibold text-gray-700">Category</label>
+            <input type="text" id="category" name="category" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-teal-500" placeholder="Enter product category" required>
+          </div>
+          <div class="flex flex-col">
+            <label for="stock" class="mb-2 font-semibold text-gray-700">Stock</label>
+            <input type="number" id="stock" name="stock" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-teal-500" placeholder="Enter product stock" required>
+          </div>
+          <div class="flex flex-col">
+            <label for="rating" class="mb-2 font-semibold text-gray-700">Rating</label>
+            <input type="number" id="rating" name="rating" min="1" max="5" step="0.1" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-teal-500" placeholder="Enter product rating" required>
+          </div>
+        </form>
+      </div>
+      <!-- Modal footer -->
+      <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
+        <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
+        <button type="submit" id="submitProductEntry" form="productForm" class="bg-orange-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-teal-500 transition duration-300 py-2 px-4 rounded-lg">Save</button>
+      </div>
+    </div>
   </div>
-  {% else %}
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 w-full">
-    {% for product in products %}
-        {% include 'card_product.html' with product_entry=product %}
-    {% endfor %}
-  </div>
-  {% endif %}
 </div>
+
+<script>
+  function addProductEntry() {
+    fetch("{% url 'main:create_product_ajax' %}", {
+      method: "POST",
+      body: new FormData(document.querySelector('#productForm')),
+    })
+    .then(response => refreshProductEntries())
+
+    document.getElementById("productForm").reset(); 
+    document.querySelector("[data-modal-toggle='crudModal']").click();
+
+    return false;
+  }
+
+  async function getProductEntries(){
+    return fetch("{% url 'main:show_json' %}").then((res) => res.json())
+  }
+
+  async function refreshProductEntries() {
+    document.getElementById("product_entry_cards").innerHTML = "";
+    document.getElementById("product_entry_cards").className = "";
+    const productEntries = await getProductEntries();
+    let htmlString = "";
+    let classNameString = "";
+
+    if (productEntries.length === 0) {
+      classNameString = "flex flex-col items-center justify-center min-h-[24rem] p-6";
+      htmlString = `
+        <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
+          <img src="{% static 'image/sad-pathfinder.png' %}" alt="Sad face" class="w-120 h-50 mb-4"/>
+          <p class="text-center text-gray-600 mt-4">There are no products available.</p>
+        </div>
+      `;
+    } else {
+      classNameString = "grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 w-full";
+      productEntries.forEach((item) => {
+        const name = DOMPurify.sanitize(item.fields.name);
+        const description = DOMPurify.sanitize(item.fields.description);
+        const category = DOMPurify.sanitize(item.fields.category);
+        htmlString += `
+          <div class="relative break-inside-avoid transition-transform transform hover:scale-105 duration-300 shadow-lg">
+            <div class="relative bg-white border-2 border-teal-300 rounded-lg overflow-hidden h-full">
+              <div class="bg-teal-100 h-40 flex items-center justify-center">
+                <span class="text-teal-700 font-bold text-2xl">${category}</span>
+              </div>
+              <div class="p-4">
+                <h3 class="font-bold text-2xl text-teal-600 mb-1">${name}</h3>
+                <p class="text-gray-700 text-lg mb-2">Rp${item.fields.price},00</p>
+                <p class="text-sm text-gray-600">${description}</p>
+                
+                <div class="mt-4 flex items-center justify-between">
+                  <div class="flex items-center space-x-1">
+                    ${item.fields.rating >= 4.5 ? `<span class="text-yellow-500 font-bold">★ ${item.fields.rating}</span>` : `<span class="text-gray-500 text-sm">Rating: ${item.fields.rating}</span>`}
+                  </div>
+                  <div class="text-sm ${item.fields.stock > 0 ? 'text-green-500' : 'text-red-500'}">
+                    Stock: ${item.fields.stock}
+                  </div>
+                </div>
+              </div>
+              
+              <div class="absolute top-2 right-2 flex space-x-1">
+                <a href="/edit-product/${item.pk}" class="bg-orange-500 hover:bg-orange-600 text-white rounded-full p-2 transition duration-300 shadow-md">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                  </svg>
+                </a>
+                <a href="/delete-product/${item.pk}" class="bg-red-500 hover:bg-red-600 text-white rounded-full p-2 transition duration-300 shadow-md">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        `;
+      });
+    }
+    document.getElementById("product_entry_cards").className = classNameString;
+    document.getElementById("product_entry_cards").innerHTML = htmlString;
+  }
+  refreshProductEntries();
+
+  const modal = document.getElementById('crudModal');
+  const modalContent = document.getElementById('crudModalContent');
+
+  function showModal() {
+    modal.classList.remove('hidden'); 
+    setTimeout(() => {
+      modalContent.classList.remove('opacity-0', 'scale-95');
+      modalContent.classList.add('opacity-100', 'scale-100');
+    }, 50); 
+  }
+
+  function hideModal() {
+    modalContent.classList.remove('opacity-100', 'scale-100');
+    modalContent.classList.add('opacity-0', 'scale-95');
+
+    setTimeout(() => {
+      modal.classList.add('hidden');
+    }, 150); 
+  }
+
+  document.getElementById("cancelButton").addEventListener("click", hideModal);
+  document.getElementById("closeModalBtn").addEventListener("click", hideModal);
+  document.getElementById("productForm").addEventListener("submit", (e) => {
+    e.preventDefault();
+    addProductEntry();
+  });
+</script>
 {% endblock content %}
